Fixed bug in coming-soon.scss where jumbotron overlapped next container in mobile landscape

--- a/scss/pages/_coming-soon.scss
+++ b/scss/pages/_coming-soon.scss
@@ -1,15 +1,21 @@
 .jumbotron.jumbotron-fluid {
   // background: lighten(#e9edf3, 5.5%);
   background-color: #fff;
-  height: 80vh;
-  margin-bottom: 5rem;
+
+  // margin-bottom: 1rem;
   @include respond("tab-port") {
-    margin-bottom: 1rem;
+    padding-bottom: 0;
+  }
+  @include respond("desktop") {
+    height: 80vh;
   }
   .hero {
     &__inner--text {
       padding: 88px 0 20px 40px;
       @include respond("tab-port") {
+        padding: 88px 0 50px 80px;
+      }
+      @include respond("desktop") {
         padding: 88px 0 120px 80px;
       }
     }
